# survivor-social-media

./: .gitignore  README.md  docker-compose.yml
api/: .gitignore  Dockerfile  __init__.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
api/service/: __init__.py
api/service/infection/: __init__.py  infection_service.py
api/service/inventory/: __init__.py  inventory_service.py
api/service/survivors/: __init__.py  survivor_service.py
api/service/trading/: trading_service.py
api/tests/: __init__.py  conftest.py  test_infection_service.py  test_survivor_service.py
frontend/: nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: InfectionReport.tsx  InfectionReportButton.tsx  LoginForm.tsx  RegisterForm.tsx  SurvivorList.tsx  SurvivorProfile.tsx  TradeForm.tsx
frontend/src/components/ui/: index.tsx
frontend/src/contexts/: UserContext.tsx
frontend/src/types/: types.ts
